opam-version: "1.2"
name:         "emile"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/emile"
bug-reports:  "https://github.com/dinosaure/emile/issues"
dev-repo:     "https://github.com/dinosaure/emile.git"
doc:          "https://dinosaure.github.io/emile/"
license:      "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune"     {build}
  "angstrom" {>= "0.9.0"}
  "ipaddr"   {>= "2.7.0"}
  "uutf"
  "fmt"
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
