opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/emile"
bug-reports:  "https://github.com/dinosaure/emile/issues"
dev-repo:     "git+https://github.com/dinosaure/emile.git"
doc:          "https://dinosaure.github.io/emile/"
license:      "MIT"
synopsis:     "Parser of email address according RFC 822"
description:  """Parser of email address according RFC 822"""

build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "ocaml"    {>= "4.03.0"}
  "dune"     {build}
  "angstrom" {>= "0.9.0"}
  "ipaddr"   {>= "2.7.0"}
  "base64"   {>= "3.0.0"}
  "pecu"
  "uutf"
  "fmt"
  "alcotest" {with-test}
]
depopts: [ "cmdliner" ]
